[gd_scene load_steps=23 format=2]

[ext_resource path="res://frame0007.png" type="Texture" id=1]
[ext_resource path="res://frame0005.png" type="Texture" id=2]
[ext_resource path="res://Model.gd" type="Script" id=3]
[ext_resource path="res://frame0000.png" type="Texture" id=4]
[ext_resource path="res://frame0002.png" type="Texture" id=5]
[ext_resource path="res://frame0001.png" type="Texture" id=6]
[ext_resource path="res://frame0006.png" type="Texture" id=7]
[ext_resource path="res://frame0004.png" type="Texture" id=8]
[ext_resource path="res://frame0003.png" type="Texture" id=9]
[ext_resource path="res://icon.png" type="Texture" id=10]
[ext_resource path="res://NAVI.gd" type="Script" id=11]
[ext_resource path="res://SwordObject.tscn" type="PackedScene" id=12]
[ext_resource path="res://Dude.gd" type="Script" id=13]

[sub_resource type="CircleShape2D" id=5]
radius = 12.6129

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 3.1817 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 3.8421 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.8882, 6.0752 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 17.7783, 16.5149 )

[sub_resource type="NavigationPolygon" id=7]
vertices = PoolVector2Array( -364.74, 118.202, -141.985, 199.375, -672.443, 199.375, -415.709, 114.426, -140.098, -21.4914, -366.627, -121.542, -668.667, -202.715, -413.821, -121.542, 95.871, -208.379, -72.1386, -21.4914, 93.9833, 4.93709, -74.0263, 201.263, 654.645, 203.151, 154.391, 3.04933, 654.645, -208.379, 152.504, -206.491 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 1, 0, 5 ), PoolIntArray( 3, 2, 6, 7 ), PoolIntArray( 7, 6, 8, 5 ), PoolIntArray( 4, 5, 8, 9 ), PoolIntArray( 9, 8, 10, 11 ), PoolIntArray( 12, 11, 10, 13 ), PoolIntArray( 14, 12, 13, 15 ) ]
outlines = [ PoolVector2Array( 654.645, 203.151, 654.645, -208.379, 152.504, -206.491, 154.391, 3.04933, 93.9833, 4.93709, 95.871, -208.379, -668.667, -202.715, -672.443, 199.375, -141.985, 199.375, -140.098, -21.4914, -72.1386, -21.4914, -74.0263, 201.263 ), PoolVector2Array( -413.821, -121.542, -366.627, -121.542, -364.74, 118.202, -415.709, 114.426 ) ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 124.35, 23.3679 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 22.8824, 116.856 )

[node name="Player" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( -11.5491, 17.9625 )
scale = Vector2( 1, 1.01171 )
collision/safe_margin = 2.666
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]
position = Vector2( 0, -3.05176e-05 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
position = Vector2( 0.667419, 13.8536 )
shape = SubResource( 5 )

[node name="SwordObject" parent="KinematicBody2D" instance=ExtResource( 12 )]

[node name="CollisionShape2D4" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0.668167, 18.9327 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 0.222717, 0.880585 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -0.37233, 10.3082 )
scale = Vector2( 1, 0.988425 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
position = Vector2( -2.31335, 0 )
rotation = 5.96046e-08
current = true

[node name="Model" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( -0.249973, 5.91693 )
rotation = 5.96046e-08
frames = SubResource( 4 )
speed_scale = 2.0

[node name="NAVI" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Enemy" type="Node2D" parent="NAVI"]
position = Vector2( 709.636, 0 )
script = ExtResource( 13 )

[node name="Sprtie" type="Sprite" parent="NAVI/Enemy"]
texture = ExtResource( 4 )

[node name="DamageHim" type="Area2D" parent="NAVI/Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NAVI/Enemy/DamageHim"]
position = Vector2( 0, 5.35466 )
shape = SubResource( 6 )

[node name="Navigation2D" type="Navigation2D" parent="NAVI"]
visible = false

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="NAVI/Navigation2D"]
position = Vector2( 462.316, 56.3744 )
navpoly = SubResource( 7 )

[node name="Line2D" type="Line2D" parent="NAVI"]
width = 5.0
default_color = Color( 0.968627, 0, 0, 1 )

[node name="BODIES" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="BODIES"]
position = Vector2( -217.521, 286.188 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D"]
position = Vector2( 102.986, 7.62939e-06 )
scale = Vector2( 3.86436, 0.646047 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D"]
position = Vector2( 103.238, 0 )
shape = SubResource( 8 )

[node name="StaticBody2D13" type="StaticBody2D" parent="BODIES"]
position = Vector2( 26.7032, 286.188 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D13"]
position = Vector2( 102.986, 7.62939e-06 )
scale = Vector2( 3.86436, 0.646047 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D13"]
position = Vector2( 103.238, 0 )
shape = SubResource( 8 )

[node name="StaticBody2D14" type="StaticBody2D" parent="BODIES"]
position = Vector2( 253.348, 286.188 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D14"]
position = Vector2( 102.986, 7.62939e-06 )
scale = Vector2( 3.86436, 0.646047 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D14"]
position = Vector2( 103.238, 0 )
shape = SubResource( 8 )

[node name="StaticBody2D15" type="StaticBody2D" parent="BODIES"]
position = Vector2( 482.99, 286.188 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D15"]
position = Vector2( 102.986, 7.62939e-06 )
scale = Vector2( 3.86436, 0.646047 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D15"]
position = Vector2( 103.238, 0 )
shape = SubResource( 8 )

[node name="StaticBody2D16" type="StaticBody2D" parent="BODIES"]
position = Vector2( 725.716, 286.188 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D16"]
position = Vector2( 102.986, 7.62939e-06 )
scale = Vector2( 3.86436, 0.646047 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D16"]
position = Vector2( 103.238, 0 )
shape = SubResource( 8 )

[node name="StaticBody2D21" type="StaticBody2D" parent="BODIES"]
position = Vector2( 931.688, 288.881 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D21"]
position = Vector2( 102.986, 7.62939e-06 )
scale = Vector2( 3.86436, 0.646047 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D21"]
position = Vector2( 103.238, 0 )
shape = SubResource( 8 )

[node name="StaticBody2D7" type="StaticBody2D" parent="BODIES"]
position = Vector2( -217.521, -180.22 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D7"]
position = Vector2( 102.986, 7.62939e-06 )
scale = Vector2( 3.86436, 0.646047 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D7"]
position = Vector2( 103.238, 0 )
shape = SubResource( 8 )

[node name="StaticBody2D8" type="StaticBody2D" parent="BODIES"]
position = Vector2( 9.12442, -180.22 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D8"]
position = Vector2( 102.986, 7.62939e-06 )
scale = Vector2( 3.86436, 0.646047 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D8"]
position = Vector2( 103.238, 0 )
shape = SubResource( 8 )

[node name="StaticBody2D9" type="StaticBody2D" parent="BODIES"]
position = Vector2( 235.77, -180.22 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D9"]
position = Vector2( 102.986, 7.62939e-06 )
scale = Vector2( 3.86436, 0.646047 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D9"]
position = Vector2( 103.238, 0 )
shape = SubResource( 8 )

[node name="StaticBody2D10" type="StaticBody2D" parent="BODIES"]
position = Vector2( 482.99, -180.22 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D10"]
position = Vector2( 102.986, 7.62939e-06 )
scale = Vector2( 3.86436, 0.646047 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D10"]
position = Vector2( 103.238, 0 )
shape = SubResource( 8 )

[node name="StaticBody2D11" type="StaticBody2D" parent="BODIES"]
position = Vector2( 725.716, -180.22 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D11"]
position = Vector2( 102.986, 7.62939e-06 )
scale = Vector2( 3.86436, 0.646047 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D11"]
position = Vector2( 103.238, 0 )
shape = SubResource( 8 )

[node name="StaticBody2D18" type="StaticBody2D" parent="BODIES"]
position = Vector2( 952.361, -180.22 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D18"]
position = Vector2( 102.986, 7.62939e-06 )
scale = Vector2( 3.86436, 0.646047 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D18"]
position = Vector2( 103.238, 0 )
shape = SubResource( 8 )

[node name="StaticBody2D2" type="StaticBody2D" parent="BODIES"]
position = Vector2( 586.228, -46.409 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D2"]
position = Vector2( 0.455383, -17.6777 )
scale = Vector2( 0.660278, 3.62915 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D2"]
position = Vector2( 0, -17.9797 )
shape = SubResource( 9 )

[node name="StaticBody2D12" type="StaticBody2D" parent="BODIES"]
position = Vector2( 356.586, 173.05 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D12"]
position = Vector2( 0.455383, -17.6777 )
scale = Vector2( 0.660278, 3.62915 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D12"]
position = Vector2( 0, -17.9797 )
shape = SubResource( 9 )

[node name="StaticBody2D22" type="StaticBody2D" parent="BODIES"]
position = Vector2( 71.9396, 74.3541 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D22"]
position = Vector2( 0.455383, -17.6777 )
scale = Vector2( 0.660278, 3.62915 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D22"]
position = Vector2( 0, -17.9797 )
shape = SubResource( 9 )

[node name="StaticBody2D17" type="StaticBody2D" parent="BODIES"]
position = Vector2( 1148.34, -64.3887 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D17"]
position = Vector2( 0.455383, -17.6777 )
scale = Vector2( 0.660278, 3.62915 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D17"]
position = Vector2( 0, -17.9797 )
shape = SubResource( 9 )

[node name="StaticBody2D19" type="StaticBody2D" parent="BODIES"]
position = Vector2( 1148.34, 151.773 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D19"]
position = Vector2( 0.455383, -17.6777 )
scale = Vector2( 0.660278, 3.62915 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D19"]
position = Vector2( 0, -17.9797 )
shape = SubResource( 9 )

[node name="StaticBody2D20" type="StaticBody2D" parent="BODIES"]
position = Vector2( 1148.34, 306.861 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D20"]
position = Vector2( 0.455383, -17.6777 )
scale = Vector2( 0.660278, 3.62915 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D20"]
position = Vector2( 0, -17.9797 )
shape = SubResource( 9 )

[node name="StaticBody2D5" type="StaticBody2D" parent="BODIES"]
position = Vector2( -238.194, 169.753 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D5"]
position = Vector2( 0.455383, -17.6777 )
scale = Vector2( 0.660278, 3.62915 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D5"]
position = Vector2( 0, -17.9797 )
shape = SubResource( 9 )

[node name="StaticBody2D6" type="StaticBody2D" parent="BODIES"]
position = Vector2( -238.194, -46.409 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BODIES/StaticBody2D6"]
position = Vector2( 0.455383, -17.6777 )
scale = Vector2( 0.660278, 3.62915 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BODIES/StaticBody2D6"]
position = Vector2( 0, -17.9797 )
shape = SubResource( 9 )
[connection signal="area_entered" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="NAVI/Enemy/DamageHim" to="KinematicBody2D" method="_on_DamageHim_area_entered"]
[connection signal="area_entered" from="NAVI/Enemy/DamageHim" to="NAVI/Enemy" method="_on_DamageHim_area_entered"]
